// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders contact_assignment correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="statusIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Person was assigned to RogerBilly
    </Text>
  </Flex>
</Flex>
`;

exports[`renders contact_unassignment correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="statusIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Person was unassigned from Roger
    </Text>
  </Flex>
</Flex>
`;

exports[`renders interaction correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="commentIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {
            "fontSize": 32,
          },
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Comment
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Interaction
    </Text>
  </Flex>
</Flex>
`;

exports[`renders survey correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="surveyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Survey
    </Text>
    <Flex
      direction="column"
      key="1"
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "marginTop": 8,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Question 1
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Answer 1
      </Text>
    </Flex>
    <Flex
      direction="column"
      key="2"
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "marginTop": 8,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Question 2
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Answer 2
      </Text>
    </Flex>
    <Flex
      direction="column"
      key="3"
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "marginTop": 8,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Question 3
      </Text>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Answer 3
      </Text>
    </Flex>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly with old stage for a contact 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Uninterested to Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Person changed from Uninterested to Curious
    </Text>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly with old stage for self 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Uninterested to Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      You changed from Uninterested to Curious
    </Text>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly without old stage for a contact 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      You added Test Person to MissionHub as Curious
    </Text>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly without old stage for self 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Curious
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      You added yourself to MissionHub as Curious
    </Text>
  </Flex>
</Flex>
`;

exports[`step is rendered correctly with comment 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="stepsIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Completed Step of Faith
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Step

test comment on completed step
    </Text>
  </Flex>
</Flex>
`;

exports[`step is rendered correctly with pathway stage 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="stepsIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Completed Guiding Step of Faith
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Step
    </Text>
  </Flex>
</Flex>
`;

exports[`step is rendered correctly without comment 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="stepsIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#ECEEF2",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#B4B6BA",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 10,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 14,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#007398",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Completed Step of Faith
    </Text>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Test Step
    </Text>
  </Flex>
</Flex>
`;
